[project]
name = "repl-nix-pixelartgenai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.1.1",
    "diffusers>=0.31.0",
    "huggingface-hub>=0.26.2",
    "numpy>=2.1.3",
    "pillow>=11.0.0",
    "streamlit>=1.40.1",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]
